--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <title>Random fun</title>
 </head>
 <body>
-  <h1 class="title">Random generator</h1>
-  <h2 class="subtitle">Click below to choose what you want to generate.</h2>
-  <p class="text">Give me something...</p>
-
-  <button class="btn" id="1">Fluffy</button>
-  <button class="btn" id="2">Funny</button>
-  <button class="btn" id="3">Tasty</button>
-
-  <div class="results"></div>
+  <div class="page-content">
+    <div class="info">
+      <h1 class="title">Random generator</h1>
+      <h2 class="subtitle">What do you want?</h2>
+      <p class="text">Give me something...</p>
+    </div> 
+    <div class="picture-box">
+      <img src="https://media.giphy.com/media/Cbx4j02mlj320/giphy.gif" alt="It's so fluffy">
+    </div>
+    
+    <div class="button-box">
+      <button class="btn" id="1">Fluffy (cat-shaped)</button>
+      <button class="btn" id="2">Fluffy (dog-shaped)</button>
+      <!-- <button class="btn" id="3">Tasty</button> -->
+    </div>
+  
+    <div class="results"></div>
+  </div>
 
   <script src="main.js"></script>
 </body>
